[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intelgraph"
version = "0.1.0"
description = "Intelligence Collection, Correlation, Verification, and Analysis Platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "IntelGraph Contributors"},
]

dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "structlog>=24.0.0",
    "ulid-py>=1.1.0",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]
postgres = [
    "psycopg2-binary>=2.9.0",
]
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pyjwt>=2.8.0",
    "pyotp>=2.9.0",
]

[project.scripts]
intelgraph = "intelgraph.__main__:main"

[tool.setuptools.packages.find]
include = ["intelgraph*"]
