[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intelgraph"
version = "0.1.0"
description = "Open-source threat intelligence platform that correlates IOCs from multiple sources using a knowledge graph with explainable, evidence-based alerts."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "IntelGraph Contributors"},
]

dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "structlog>=24.0.0",
    "ulid-py>=1.1.0",
    "defusedxml>=0.7.1",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pyjwt>=2.8.0",
    "pyotp>=2.9.0",
    "jinja2>=3.1.0",
    "stix2>=3.0.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]
postgres = [
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
intelgraph = "intelgraph.__main__:main"

[tool.setuptools.packages.find]
include = ["intelgraph*"]
