[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intelgraph"
version = "0.1.0"
description = "Open-source threat intelligence platform that correlates IOCs from multiple sources using a knowledge graph with explainable, evidence-based alerts."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "IntelGraph Contributors"},
]

dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "structlog>=24.0.0",
    "ulid-py>=1.1.0",
    "defusedxml>=0.7.1",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pyjwt>=2.8.0",
    "pyotp>=2.9.0",
    "jinja2>=3.1.0",
    "stix2>=3.0.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
intelgraph = "intelgraph.__main__:main"

[tool.setuptools.packages.find]
include = ["intelgraph*"]

# PEP 735 Dependency Groups (uv native format)
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "bandit>=1.7.0",
    "black>=24.0.0",
]

# Tool Configurations

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "slow: marks tests as slow",
]

[tool.coverage.run]
source = ["intelgraph"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_untyped_calls = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "W503",  # line break before binary operator
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
